<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">SW5e Bestiary</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="basic_search">Basic Search</string>
    <string name="advanced_search">Adv Search</string>
    <string name="lists">Lists</string>
    <string name="welcome">Welcome to the SW5e Bestiary App! Here you can search for creatures within the system, and make lists of creatures for later use!</string>
    <string name="main_logo">The SW5e Logo</string>
    <string name="main_menu">Main Menu</string>
    <string name="search">Name…</string>
    <string name="adv_search">Search…</string>
    <string name="strength">STR</string>
    <string name="dexterity">DEX</string>
    <string name="constitution">CON</string>
    <string name="intelligence">INT</string>
    <string name="wisdom">WIS</string>
    <string name="charisma">CHA</string>
    <string name="actions">ACTIONS</string>
    <string name="reactions">REACTIONS</string>
    <string name="legendary">LEGENDARY ACTIONS</string>
    <string name="userLists">Saved Lists</string>
    <string name="makeList">Make A New List</string>
    <string name="listName">List Name…</string>
    <string name="saveList">Save List</string>
    <string name="deleteList">Delete Selected Lists</string>
    <string name="cancelDelete">Cancel</string>
    <string name="editList">Edit List</string>
    <string-array name="advSearchOption">
        <item>Name</item>
        <item>Type</item>
        <item>Alignment</item>
        <item>Size</item>
        <item>CR</item>
    </string-array>
</resources>